--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
-    background-color: white;
-    color: pink ;
+    background-color: black;
+    color: white ;
 }
 
 #logo {
@@ -50,19 +50,35 @@ html{
 }
 
 
-/* navbar styling */
+.max-width{
+    max-width: 1300px;
+    padding: 0 80px;
+    margin: auto;
+}
+.newBlog,.block_divs, footer{
+    font-family: 'Poppins', sans-serif;
+}
+.newBlog .newBlog-content,
+
+.blog_divs .block_divs{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .navbar{
     position: fixed;
-    background: pink;
+    background: white;
     width: 100%;
     z-index: 999;
-    padding: 30px 0;
     font-family: 'Ubuntu', sans-serif;
     transition: all 0.3s ease;
+    margin-top: 0%;
 }
 .navbar.sticky{
-    padding: 15px 0;
-    background: pink;
+    padding: 0;
+    background: white;
 }
 .navbar .max-width{
     display: flex;
@@ -75,7 +91,7 @@ html{
     font-weight: 600;
 }
 .navbar .logo a span{
-    color: pink;
+    color: black;
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
@@ -94,13 +110,13 @@ html{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-    color: white;
+    color: black;
 }
 .navbar.sticky .menu li a:hover{
-    color: #fff;
+    color: black;
 }
- 
-enu btn styling */
+
+/*menu btn styling */
 .menu-btn{
     color: #fff;
     font-size: 23px;
@@ -140,39 +156,43 @@ enu btn styling */
     position:relative;
 }
 
-/* contact section styling */
-.contact{
-    background-color: pink;
+/* newBlog section styling */
+.newBlog{
+    background-color: grey;
+    color:white;
 }
-.contact .title::after{
-   content: "get in touch";
+
+.newBlog .title{
+   color:black;
+    padding: 20px;
 }
-.contact .contact-content .column{
+.newBlog .newBlog-content .column{
    width: calc(50% - 30px);
+
 }
-.contact .contact-content .text{
+.newBlog .newBlog-content .text{
    font-size: 20px;
    font-weight: 600;
    margin-bottom: 10px;
 }
-.contact .right form .fields{
+.newBlog .right form .fields{
    display: flex;
 }
-.contact .right form .field,
-.contact .right form .fields .field{
+.newBlog .right form .field,
+.newBlog .right form .fields .field{
    height: 45px;
    width: 100%;
    margin-bottom: 15px;
 }
-.contact .right form .textarea{
+.newBlog .right form .textarea{
    height: 80px;
    width: 100%;
 }
-.contact .right form .name{
+.newBlog .right form .name{
    margin-right: 10px;
 }
-.contact .right form .field input,
-.contact .right form .textarea textarea{
+.newBlog .right form .field input,
+.newBlog .right form .textarea textarea{
    height: 100%;
    width: 100%;
    border: 1px solid lightgrey;
@@ -183,17 +203,18 @@ enu btn styling */
    font-family: 'Poppins', sans-serif;
    transition: all 0.3s ease;
 }
-.contact .right form .field input:focus,
-.contact .right form .textarea textarea:focus{
+.newBlog .right form .field input:focus,
+.newBlog .right form .textarea textarea:focus{
    border-color: #b3b3b3;
 }
-.contact .right form .textarea textarea{
+.newBlog .right form .textarea textarea{
  padding-top: 10px;
  resize: none;
 }
-.contact .right form .button-area{
+.newBlog .right form .button-area{
  display: flex;
  align-items: center;
+ padding-bottom: 40px;
 }
 .right form .button-area button{
  color: #fff;
@@ -222,9 +243,7 @@ footer{
     padding: 15px 23px;
     color: #fff;
     text-align: center;
-    position:absolute;
-    bottom:0.01%;
-    width:100%;
+    margin-top:5px ;
 }
 footer span {
     color: pink;
@@ -233,3 +252,5 @@ footer span {
 footer span a:hover{
     text-decoration: underline;
 }
+
+
