--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
-    background-color: black;
-    color: white ;
+    background-color:#ddeaf8;
+    color: black ;
+    
 }
 
 #logo {
@@ -15,6 +16,7 @@ body {
 #blogshow {
     display: flex;
     flex-wrap: wrap;
+  
 }
 
 #button {
@@ -85,10 +87,14 @@ html{
     align-items: center;
     justify-content: space-between;
 }
-.navbar .logo a{
+.navbar .logo img{
     color: #111;
     font-size: 35px;
     font-weight: 600;
+    width : 161px;
+    height : 80px;
+    margin : 0;
+    padding : 0;
 }
 .navbar .logo a span{
     color: black;
@@ -156,20 +162,67 @@ html{
     position:relative;
 }
 
+
+
+/* home section styling */
+.home{
+    display: flex;
+     background: url("images/blog.jpeg") no-repeat center; 
+    height: 80vh;
+    color: #111;
+    min-height: 500px;
+    background-size: cover;
+    /* background-attachment: fixed; */
+    font-family: 'Ubuntu', sans-serif;
+    width:100%;
+}
+.home .max-width{
+  width: 100%;
+  display: flex;
+}
+.home .max-width .row{
+  margin-right: 0;
+}
+
+
+.home .home-content .text-2{
+    
+    color: #fff;
+    font-family: Avenir;
+    font-size: 50px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 900;
+    letter-spacing: normal;
+    line-height: 1.29;
+    text-align: center;
+    width: 435px;
+    z-index: 99;
+    width:100%;
+   margin: 0 70%;
+   
+}
+.newBlog-content h2{
+    margin-left: 45%;
+}
 /* newBlog section styling */
 .newBlog{
-    background-color: grey;
-    color:white;
+    background-color:rgb(255, 255, 255);
+    
+
 }
 
 .newBlog .title{
    color:black;
     padding: 20px;
+    font-weight: bold;
+    margin-left: 40%;
 }
 .newBlog .newBlog-content .column{
    width: calc(50% - 30px);
 
 }
+
 .newBlog .newBlog-content .text{
    font-size: 20px;
    font-weight: 600;
@@ -177,6 +230,7 @@ html{
 }
 .newBlog .right form .fields{
    display: flex;
+   color:#111;
 }
 .newBlog .right form .field,
 .newBlog .right form .fields .field{
@@ -217,7 +271,7 @@ html{
  padding-bottom: 40px;
 }
 .right form .button-area button{
- color: #fff;
+ color: white;
  display: block;
  width: 160px!important;
  height: 45px;
@@ -228,7 +282,7 @@ html{
  cursor: pointer;
  flex-wrap: nowrap;
  background: black;
- border: 2px solid black;
+ border: 2px solid rgb(0, 0, 0);
  transition: all 0.3s ease;
 }
 .right form .button-area button:hover{
@@ -246,11 +300,134 @@ footer{
     margin-top:5px ;
 }
 footer span {
-    color: pink;
+    color: lavenderblush;
     text-decoration: none;
 }
 footer span a:hover{
     text-decoration: underline;
 }
 
+
+
+
+/* responsive media query start */
+@media (max-width: 1104px) {
+    .home .home-content .left img{
+       width:100%;
+       height:500px;
+       right:50px;
+       top: 25%;
+
+     
+    }
+}
+
+@media (max-width: 991px) {
+    .max-width{
+        padding: 0 50px;
+    }
+}
+@media (max-width: 947px){
+    .menu-btn{
+        display: block;
+        z-index: 999;
+        color:cyan;
+    }
+    .menu-btn i.active:before{
+        content: "\f00d";
+        color:#111
+    }
+    .navbar .menu{
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        left: -100%;
+        top: 0;
+        background: white;
+        text-align: center;
+        padding-top: 80px;
+        color: black;
+        transition: all 0.3s ease;
+    }
+    .navbar .menu.active{
+        left: 0;
+    }
+    .navbar .menu li{
+        display: block;
+    }
+    .navbar .menu li a{
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 25px;
+    }
+    .home .home-content .text-2{
+        font-size: 50px;
+        margin-left: 20%;
+        font-weight: 300;
+
+    }
+   
+    .max-width{
+        max-width: 930px;
+    }
+    .block_divs .column{
+        width: 100%;
+    }
+   
+    .newBlog .newBlog_content .column{
+        width: 100%;
+        margin-bottom: 35px;
+    }
+}
+@media (max-width: 899px) {
+     .home .home-content .left img{
+       display: none;
+        
+        
+      
+     } 
+}
+
+@media (max-width: 690px) {
+    .max-width{
+        padding: 0 23px;
+    }
+    .home .home-content .text-2{
+        font-size: 60px;
+    }
+  
+}
+
+@media (max-width: 500px) {
+    .home .home-content .text-2{
+        font-size: 50px;
+        font-weight: 200;
+    }
+    .home .home-content .text-3{
+        font-size: 27px;
+    }
+    .block_divs  .right .text
+    {
+        font-size: 19px;
+    }
+    .newBlog .left form .fields{
+        flex-direction: column;
+    }
+    .newBlog .left form .name,
+    .newBlog .left form .email{
+        margin: 0;
+    }
+    .right form .error-box{
+       width: 150px;
+    }
+    .scroll-up-btn{
+        right: 15px;
+        bottom: 15px;
+        height: 38px;
+        width: 35px;
+        font-size: 23px;
+        line-height: 38px;
+    }
+
+}
 
